<resources>
    <string name="app_name">InstantCars</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="Usuario">Usuario</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="o_crear_cuenta_con">O Crear cuenta con</string>
    <string name="o_inicia_sesi_n_con">O inicia sesión con</string>
    <string name="no_tienes_cuenta_crea_una_ahora">¿No tienes cuenta? Crea una ahora</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="registrate">Registrate</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿YA TIENES CUENTA? INICIA SESIÓN</string>
    <string name="bot_n_para_abrir_men_de_usuario">Botón para abrir menú de usuario</string>
    <string name="agregar">Agregar</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="guardar_coche">Guardar Coche</string>
    <string name="descripci_n_del_coche">Descripción del coche</string>
    <string name="precio_del_coche">Precio del coche</string>
    <string name="a_o_del_coche">Año del coche</string>
    <string name="modelo_del_coche">Modelo del coche</string>
    <string name="marca_del_coche">Marca del coche</string>
    <string name="agregar_un_nuevo_coche">Agregar un nuevo coche</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="precio">Precio</string>
    <string name="subir_coche">Subir coche</string>
    <string name="descripci_n_del_coche_estado_defectos_etc">Descripción del coche, estado, defectos, etc.</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="volver">Volver</string>
    <string name="favoritos">Favoritos</string>
    <string name="Ubicación">Ubicación\n</string>
    <string name="subidas">Subidas</string>
    <string name="actualizar">Actualizar</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="imagen_de_coche">Imagen de coche</string>
    <string name="cochefav">cocheFav</string>
    <string name="coche_favorito">Coche favorito</string>
    <string name="empieza_a_negociar">Empieza a negociar</string>
    <string name="imagen_del_coche">Imagen del coche</string>
    <string name="descripcion_del_coche">Descripcion del coche</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="coche">Coche</string>
    <string name="_4000">€4000</string>
    <string name="precio_formato">Precio: €%s</string>
    <string name="titulo_coche">%1$s %2$s</string>
    <string name="precio_coche">€%1$s</string>
    <string name="MarcaModelo">%1$s %2$s</string>
    <string name="PrecioCoche">€%1$s</string>
    <string name="ubicacion">Ubicación</string>
    <string name="precio_format">%1$s€</string>
    <string name="kilometrajeKm">%1$s Km</string>
    <string name="chats">Chats</string>
    <string name="buscar">Buscar</string>
    <string name="conversaciones">Conversaciones</string>
    <string name="esto_es_otro_mensaje">Esto es otro mensaje</string>
    <string name="_8_00">8:00</string>
    <string name="dia_1">Dia 1</string>
    <string name="user_icon">User Icon</string>
    <string name="esto_es_un_mensaje">Esto es un mensaje</string>
    <string name="junio_1">Junio 1</string>
    <string name="enviar">Enviar</string>
    <string name="escribir_mensaje">Escribir Mensaje</string>
    <string name="escribir_mensajes">Escribir Mensajes</string>
    <string name="lista_mensajes">Lista Mensajes</string>
    <string name="imagen_del_usuario">Imagen del usuario</string>
    <string name="ltimo_mensaje_enviado">Último mensaje enviado…</string>
    <string name="hora_ultimo_mensaje">Hora ultimo mensaje</string>
    <string name="calificar_este_usuario">Calificar este usuario</string>
    <string name="calificar_usuario">Calificar Usuario</string>
    <string name="_0_calificaciones">(0 calificaciones)</string>
    <string name="calificaciones">" %.1f (%d calificaciones)"</string>
    <string name="_0">0</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="m_ximo_precio">Máximo precio</string>
    <string name="m_ximo_kilometraje">Máximo kilometraje</string>
    <string name="limpiar_filtros">Limpiar filtros</string>
    <string name="precio_m_ximo">Precio Máximo</string>
    <string name="filtros_de_b_squeda">Filtros de búsqueda</string>
    <string name="ubicaci_n_por_provincia">Ubicación por provincia</string>
    <string name="califica_al_usuario">Califica al usuario</string>
    <string name="tus_subidas">Tus subidas</string>
    <string name="tus_favoritos">Tus favoritos</string>
    <string name="a_o">Año</string>
    <string name="anio_coche">Año: %1$s</string>

</resources>