<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/editTextKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/m_ximo_kilometraje"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/m_ximo_precio"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Ubicación"
        android:inputType="text" />

    <Button
        android:id="@+id/btnLimpiarFiltros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/darker_gray"
        android:text="@string/limpiar_filtros"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnAplicarFiltros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/aplicar_filtros"
        android:textColor="@android:color/white" />

</LinearLayout>
