<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCoche"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coche"
            app:shapeAppearanceOverlay="@style/RoundedImage" />

        <TextView
            android:id="@+id/txtMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/txtModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modelo"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/txtUbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ubicación"
            android:textSize="16sp"
            android:layout_marginTop="4dp" />

        <ImageButton
            android:id="@+id/btnFavorito"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/round_remove_circle_outline_24"
            android:contentDescription="@string/coche_favorito" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
