<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context=".PortalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="133dp"
            android:layout_height="132dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/usuario" />

        <TextView
            android:id="@+id/tv_welcome_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:padding="8dp"
            />


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/correo_electronico"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:padding="18dp"
            android:textSize="20sp">
        </EditText>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/contrase_a"
            android:drawableStart="@drawable/contrasena"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:padding="18dp"
            android:textSize="20sp">
        </EditText>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_rounded_corner"
            android:padding="18dp"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#000000"
            android:textSize="20sp">
        </Button>

        <Button
            android:id="@+id/button_GoTo_create_account"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/no_tienes_cuenta_crea_una_ahora"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.02"
            android:padding="8dp"
            android:background="?attr/selectableItemBackground"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>