<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- AppBar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_conversaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp">

            <!-- Título centrado -->
            <TextView
                android:id="@+id/title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/conversaciones"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!-- Botón de retroceso -->
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/volver"
                android:src="@drawable/baseline_arrow_back_24"
                app:tint="@color/white" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- RecyclerView para mostrar las conversaciones -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_chats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/chats"
        android:padding="10dp"
        android:background="@drawable/main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_conversaciones" />

</androidx.constraintlayout.widget.ConstraintLayout>
